# DIT632

./: CMakeLists.txt  README.md
.gitignore/: .gitignore
client_server/: client.c  person.c  person.h  server.c
templates/: template.c
wp_1/: README.md
wp_1/exerc_1_1/: exerc_1_1.c
wp_1/exerc_1_2/: exerc_1_2.c
wp_1/exerc_1_3/: exerc_1_3.c
wp_1/exerc_1_4/: exerc_1_4.c
wp_2/: README.md
wp_2/exerc_2_1/: exerc_2_1.c
wp_2/exerc_2_2/: exerc_2_2.c
wp_2/exerc_2_3/: exerc_2_3.c
wp_2/exerc_2_4/: exerc_2_4.c
wp_2/exerc_2_5/: exerc_2_5.c
wp_2/exerc_2_6/: exerc_2_6.c
wp_2/exerc_2_7/: exerc_2_7.c
wp_2/exerc_2_8/: exerc_2_8.c
wp_2/nim_demo/: nim_tst_linux
wp_3/: README.md  exerc_3_3.c
wp_3/exerc_3_1/: exerc_3_1.c
wp_3/exerc_3_2/: exerc_3_2.c  exerc_3_4.c
wp_3/exerc_3_3/: exerc_3_3.c
wp_3/exerc_3_4/: exerc_3_4.c  personalNumberValidator.c  personalNumberValidator.h
wp_4/: README.md
wp_4/exerc_4_1/: code.c
wp_4/exerc_4_2/: decode.c
wp_4/exerc_4_3/: exerc_4_3.c
wp_4/exerc_4_4/: exerc_4_4.c  exerc_4_4.ino
wp_4/exerc_4_5/: exerc_4_5.c  exerc_4_5.ino
wp_4/skeleton_code/: template exerc 4_4.c
wp_5/: README.md
wp_5/exerc_5_1/: exerc_5_1.ino
wp_5/exerc_5_2/: exerc_5_2.ino
wp_6/: README.md
wp_6/exerc_6_1/: exerc_6_1.txt
wp_6/exerc_6_2/: exerc_6_2.c
wp_6/exerc_6_3/: exerc_6_3.c
wp_6/exerc_6_4/: exerc_6_4.c
wp_6/exerc_6_5/: exerc_6_5.c
wp_6/skeleton/: sortandfind_20.c
